# stoffel-mpc-coordinator

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.benchmark  README.md  generate-ids
.github/workflows/: release.yml  rust.yml
crates/bins/: Cargo.toml
crates/coord-shared/: Cargo.toml
crates/coord-shared/src/: lib.rs
crates/coord-shared/src/tests/: fake_coord.rs
crates/off-chain/: Cargo.toml
crates/off-chain/src/: lib.rs
crates/off-chain/src/tests/: fake_coord.rs  mod.rs
crates/off-chain/tests/: off_chain.rs
crates/on-chain/: Cargo.toml
crates/on-chain/src/: fake_coord.rs  lib.rs
crates/on-chain/tests/: on_chain.rs
ids/: server_cert.crt  server_key.der
ids/clients/: cert0.crt  cert1.crt  key0.der  key1.der
ids/nodes/: cert0.crt  cert1.crt  cert2.crt  cert3.crt  cert4.crt  key0.der  key1.der  key2.der  key3.der  key4.der
programs/: authorize_transfer.stfbin  claim_account.stfbin  combine_partials.stfbin  confidential_transfer.stfbin  create_account.stfbin  partial_decrypt.stfbin  range_proof.stfbin  set_auditor.stfbin  wrap_mint.stfbin
src/: fake_coord.rs  lib.rs  off_chain.rs  on_chain.rs  rpc.rs  self_signed_certs.rs  types.rs
src/executor/: mod.rs
src/handlers/: authorize_transfer.rs  claim_account.rs  confidential_transfer.rs  create_account.rs  distributed_decrypt.rs  mod.rs  range_proof.rs  registry.rs  set_auditor.rs  wrap_mint.rs
src/jobs/: mod.rs
src/off_chain/: mod.rs  tests.rs
src/on_chain/: mod.rs  tests.rs
src/server/: masks.rs  mod.rs
src/tests/: fake_coord.rs
src/tests/generate-ids/: generate-ids
src/vm/: integration_tests.rs  mod.rs
tests/: off_chain.rs  on_chain.rs
