[package]
name = "stoffel-mpc-coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy-coordinator"
path = "src/deploy-coordinator/bin/main.rs"

[dependencies]
stoffelnet = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/stoffel-networking.git", branch = "add-all-client-conns" }
stoffel-solidity-bindings = { version = "0.1.0", git = "ssh://git@github.com/Stoffel-Labs/Stoffel-solidity-SDK.git", branch = "test-coord" }
alloy = { version = "1.5.2", features = ["full", "node-bindings"] }
alloy-primitives = "1.5.4"
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
ark-bls12-381 = "0.5.0"
downcast-rs = "2.0.2"
jsonrpsee = { version = "0.26.0", features = ["full"] }
serde = "1.0.228"
dyn-clone = "1.0.20"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
futures-util = "0.3.31"
rcgen = "0.14.7"
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower = "0.5.3"
rustls = "0.23.36"
tokio-rustls = "0.26.4"
url = "2.5.8"
rand = "0.10.0"
