[package]
name = "stoffel-mpc-coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy-contract"
path = "src/deploy-contract/bin/main.rs"

[[bin]]
name = "run-coord"
path = "src/run-coord/bin/main.rs"

[dependencies]
stoffelmpc-mpc = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "test-coord" }
stoffelnet = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/stoffel-networking.git" }
stoffel-solidity-bindings = { version = "0.1.0", git = "ssh://git@github.com/Stoffel-Labs/Stoffel-solidity-SDK.git", branch = "test-coord" }
alloy = { version = "1.5.2", features = ["full", "node-bindings"] }
alloy-primitives = "1.5.4"
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
ark-bls12-381 = "0.5.0"
downcast-rs = "2.0.2"
jsonrpsee = { version = "0.26.0", features = ["full"] }
serde = "1.0.228"
dyn-clone = "1.0.20"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
futures-util = "0.3.31"
rcgen = "0.14.7"
tower = "0.5.3"
rustls = "0.23.36"
tokio-rustls = "0.26.4"
url = "2.5.8"
ring = "0.17.14"
hyper = "1.8.1"
hyper-util = "0.1.20"
x509-parser = "0.18.1"
hex = "0.4.3"
ark-std = "0.5.0"
hpke = "0.13.0"
rand = "0.9.2"
p256 = "0.13.2"
