[package]
name = "stoffel-mpc-coordinator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy-contract"
path = "src/tests/deploy-contract/bin/main.rs"
required-features = ["on-chain"]

[[bin]]
name = "run-coord"
path = "src/tests/run-coord/bin/main.rs"
required-features = ["off-chain"]

[[bin]]
name = "generate-ids"
path = "src/tests/generate-ids/bin/main.rs"

[features]
default = ["on-chain", "off-chain"]
benchmark = []
on-chain = [
    "dep:alloy",
    "dep:alloy-primitives",
    "dep:stoffel-solidity-bindings",
    "dep:stoffel-solidity-bindings-test",
]
off-chain = []

[dependencies]
stoffelmpc-mpc = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/mpc-protocols.git", branch = "main" }
#stoffelnet = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/stoffel-networking.git" }
stoffel-solidity-bindings = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/Stoffel-solidity-SDK.git", branch = "use-immutable-vars", optional = true }
stoffel-solidity-bindings-test = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/Stoffel-solidity-SDK.git", branch = "use-immutable-vars", optional = true }
alloy = { version = "1.5.2", features = ["full", "node-bindings"], optional = true }
alloy-primitives = { version = "1.5.4", optional = true }
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
ark-bls12-381 = "0.5.0"
downcast-rs = "2.0.2"
jsonrpsee = { version = "0.26.0", features = ["full"] }
serde = "1.0.228"
stoffel-vm-types = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/StoffelVM.git", branch = "feature/monorepo" }
dyn-clone = "1.0.20"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
futures-util = "0.3.31"
rcgen = "0.14.7"
tower = "0.5.3"
rustls = "0.23.36"
tokio-rustls = "0.26.4"
url = "2.5.8"
ring = "0.17.14"
hyper = "1.8.1"
hyper-util = "0.1.20"
x509-parser = "0.18.1"
hex = "0.4.3"
ark-std = "0.5.0"
hpke = "0.13.0"
rand = "0.9.2"
p256 = "0.13.2"
tracing = "0.1"

[[test]]
name = "off_chain"
required-features = ["off-chain"]

[[test]]
name = "on_chain"
required-features = ["on-chain"]
