[package]
name = "stoffel-mpc-coordinator-shared"
version = "0.1.0"
edition = "2021"
authors = ["Stoffel Labs Inc <contact@stoffelmpc.com>"]
homepage = "https://stoffelmpc.com"
repository = "https://github.com/Stoffel-Labs/stoffel-mpc-coordinator.git"
documentation = "https://docs.rs/stoffel-mpc-coordinator"
categories = ["cryptography", "network-programming"]
keywords = ["mpc", "coordinator", "cryptography", "json-rpc", "ethereum"]
license = "Apache-2.0"
readme = "README.md"

[features]
benchmark = []

[dependencies]
stoffelmpc-mpc = { package = "stoffelcrypto", version = "0.1.0" }
stoffelnet = "0.1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
ark-bls12-381 = "0.5.0"
jsonrpsee = { version = "0.26.0", features = ["full"] }
serde = "1.0.228"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
thiserror = "2.0.18"
async-trait = "0.1.89"
futures-util = "0.3.31"
rcgen = "0.14.7"
tower = "0.5.3"
rustls = "0.23.36"
tokio-rustls = "0.26.4"
url = "2.5.8"
ring = "0.17.14"
hyper = "1.8.1"
hyper-util = "0.1.20"
x509-parser = "0.18.1"
hpke = "0.13.0"
rand = "0.9.2"
p256 = "0.13.2"
tracing = "0.1"

[dev-dependencies]
ark-std = "0.5.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
