[package]
name = "stoffel-mpc-coordinator-on-chain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
stoffel-mpc-coordinator-shared = { version = "0.1.0", path = "../coord-shared" }
alloy = { version = "1.5.2", features = ["full", "node-bindings"] }
alloy-primitives = { version = "1.5.4" }
stoffel-solidity-bindings = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/Stoffel-solidity-SDK.git", branch = "use-immutable-vars" }
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
async-trait = "0.1.89"
futures-util = "0.3.31"
hpke = "0.13.0"
jsonrpsee = { version = "0.26.0", features = ["full"] }
p256 = "0.13.2"
rand = "0.9.2"
rcgen = "0.14.7"
serde = "1.0.228"
stoffelmpc-mpc = { package = "stoffelcrypto", version = "0.1.0" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
stoffel-solidity-bindings-test = { version = "0.1.0", git = "https://github.com/Stoffel-Labs/Stoffel-solidity-SDK.git", branch = "use-immutable-vars" }
ark-std = "0.5.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "on_chain"
